--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,11 +1,14 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <!-- Link the style sheet here; DONE-->
+   <link rel="stylesheet" href="/static/style.css">
+   <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:lightblue; height: 1in;">
     <div class="container-fluid">
       <h2 style="padding-right: 5%;">Dealerships</h2>
+      <!-- ??? What is this part doing? -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,36 +30,38 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+      <!-- Insert header information here; DONE-->
+       <h1>About Us</h1>
+       Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person_squirtle.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Squirtle</p>
+          <p>Squirtle</p>
+          <p class="card-text">Squirtle can help you secure the best quality cars at the most reasonable price.</p>
+          <p>squirrrrtle@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person_charmander.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Charmander</p>
+          <p>Charmander</p>
+          <p class="card-text">Charmander knows everything about sport cars and powerful trucks.</p>
+          <p>charm_max@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person_bulbasaur.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Bulbasaur</p>
+          <p>Bulbasaur</p>
+          <p class="card-text">Bulbasaur is our expert of new energy vehicles. Considering buying an electrical car? Ask him!</p>
+          <p>greenman@bestcars.com</p>
         </div>
       </div>
     </div>
